# demo-quickstart

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
public/: index.html  main.js  styles.css
src/: main.rs
src/db/: connection.rs  ddl.rs  mod.rs  models.rs
src/util/: buffer.rs  coords.rs  devices.rs  geo.rs  logging.rs  metrics.rs  mod.rs
src/web/: mod.rs  routes.rs  server.rs
