[package]
name = "scylladb-quick-demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
futures = "0.3.17"
tokio-retry = "0.3.0"

# Logging
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# Database
scylla = "0.8.2"

# Results
thiserror = "1.0.32"
anyhow = "1.0.44"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Other
dotenv = "0.15.0"
chrono = "0.4"
structopt = "0.3.24"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
uuid = { version = "1.4.1", features = ["serde"] }
rand = "0.8"
fake = { version = "2.6.1", features = ["geo"] }
csv = "1.1"
